<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_spdlog_logger</name>
  <version>1.0.0</version>
  <description>Package that changes the underlying logging mechanism to spdlog.</description>
  <maintainer email="20467009+jncfa@users.noreply.github.com">jncfa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>spdlog_vendor</depend>
  <depend>rcl_logging_interface</depend>
  <depend>rcutils</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
